--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "vim/bundle/supertab"]
 	path = vim/bundle/supertab
 	url = http://github.com/vim-scripts/SuperTab.git
+[submodule "vim/bundle/buffergator"]
+	path = vim/bundle/buffergator
+	url = http://github.com/jeetsukumaran/vim-buffergator.git
