--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,15 @@
 [submodule "vim/bundle/fugitive"]
 	path = vim/bundle/fugitive
-	url = http://github.com/tpope/vim-fugitive.git
+	url = https://github.com/tpope/vim-fugitive.git
 [submodule "vim/bundle/closetag"]
 	path = vim/bundle/closetag
-	url = http://github.com/docunext/closetag.vim.git
+	url = https://github.com/docunext/closetag.vim.git
 [submodule "vim/bundle/supertab"]
 	path = vim/bundle/supertab
-	url = http://github.com/vim-scripts/SuperTab.git
+	url = https://github.com/ervandew/supertab
 [submodule "vim/bundle/buffergator"]
 	path = vim/bundle/buffergator
-	url = http://github.com/jeetsukumaran/vim-buffergator.git
+	url = https://github.com/jeetsukumaran/vim-buffergator.git
 [submodule "vim/bundle/tagbar"]
 	path = vim/bundle/tagbar
-	url = git://github.com/majutsushi/tagbar.git
+	url = https://github.com/majutsushi/tagbar.git
