--- a/.gitmodules
+++ b/.gitmodules
@@ -1,18 +1,18 @@
-[submodule "vim/bundle/fugitive"]
-	path = vim/bundle/fugitive
+[submodule "vim/.vim/bundle/fugitive"]
+	path = vim/.vim/bundle/fugitive
 	url = https://github.com/tpope/vim-fugitive.git
-[submodule "vim/bundle/closetag"]
-	path = vim/bundle/closetag
+[submodule "vim/.vim/bundle/closetag"]
+	path = vim/.vim/bundle/closetag
 	url = https://github.com/docunext/closetag.vim.git
-[submodule "vim/bundle/supertab"]
-	path = vim/bundle/supertab
+[submodule "vim/.vim/bundle/supertab"]
+	path = vim/.vim/bundle/supertab
 	url = https://github.com/ervandew/supertab
-[submodule "vim/bundle/buffergator"]
-	path = vim/bundle/buffergator
+[submodule "vim/.vim/bundle/buffergator"]
+	path = vim/.vim/bundle/buffergator
 	url = https://github.com/jeetsukumaran/vim-buffergator.git
-[submodule "vim/bundle/tagbar"]
-	path = vim/bundle/tagbar
+[submodule "vim/.vim/bundle/tagbar"]
+	path = vim/.vim/bundle/tagbar
 	url = https://github.com/majutsushi/tagbar.git
-[submodule "vim/bundle/vim-perl"]
-	path = vim/bundle/vim-perl
+[submodule "vim/.vim/bundle/vim-perl"]
+	path = vim/.vim/bundle/vim-perl
 	url = https://github.com/vim-perl/vim-perl.git
