--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -46,7 +46,7 @@ set -g display-panes-time 2000
 set -g status-bg black
 set -g status-fg white
 set -g status-left-length 20
-set -g status-left '#[fg=green]#H'
+set -g status-left '#[fg=green]#h '
 setw -g window-status-current-fg cyan
 set -g status-right-length 50
 set -g status-right "#[fg=yellow]#(uptime | cut -d "," -f 3-)"
