--- a/tmux/.tmuxrc
+++ b/tmux/.tmuxrc
@@ -16,6 +16,7 @@ ssh() {
     esac
 }
 
+export TERM="xterm-256color"
 
 # Improves tmux command so that `tmux` doesn't
 # implicitly create and join an anonymous session.
