--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,8 +12,8 @@ set -g set-titles-string '#T - #I:#W'
 
 # Mouse support
 set -g mouse-select-pane on
-#set -g mouse-resize-pane on
-#set -g mouse-select-window on
+set -g mouse-resize-pane on
+set -g mouse-select-window on
 setw -g mode-mouse on
 
 # 256 color support
@@ -21,6 +21,7 @@ set -g default-terminal "screen-256color"
 
 # Show activity in background windows
 setw -g monitor-activity on
+set -g visual-activity on
 
 # Start windows numbers from 1
 set -g base-index 1
@@ -31,22 +32,36 @@ bind r source-file ~/.tmux.conf # reload config
 bind C-space last-window
 bind C-c command-prompt -p command: "new-window -n '%1' '%1'"
 
-# Message bar
-set -g message-attr bright
-set -g message-bg black
-set -g message-fg blue
-set -g display-time 2000
-set -g display-panes-time 2000
+# set pane colors - hilight the active pane
+set-option -g pane-border-fg colour235 #base02
+set-option -g pane-active-border-fg colour240 #base01
 
-# Window mode bar
-#set -g mode-bg white
-#set -g mode-fg black
+# colorize messages in the command line
+set-option -g message-bg black #base02
+set-option -g message-fg brightred #orange
+
+set-option -g status on                # turn the status bar on
+set -g status-utf8 on                  # set utf-8 for the status bar
+set -g status-interval 5               # set update frequencey (default 15 seconds)
 
 # Status bar
-set -g status-bg black
-set -g status-fg white
-set -g status-left-length 20
-set -g status-left '#[fg=green]#h '
-setw -g window-status-current-fg cyan
-set -g status-right-length 50
-set -g status-right "#[fg=yellow]#(uptime | cut -d "," -f 3-)"
+set -g status-bg colour235
+set -g status-fg yellow
+set -g status-attr dim
+
+# hostname and IP address on left
+set -g status-left-length 70
+set -g status-left "#[fg=green][#h#(ipinfo)] #S #I:#P : "
+
+# session name, window and pane number, date and time on right
+set -g status-right-length 60
+set -g status-right "#[fg=yellow]:: %d %b %Y #[fg=green]:: %l:%M %p :: #(date -u | awk '{print $4}')::"
+
+setw -g window-status-fg white
+setw -g window-status-bg colour236
+setw -g window-status-attr dim
+
+setw -g window-status-current-fg yellow
+setw -g window-status-current-bg colour236
+setw -g window-status-current-attr bright
+
