--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "vim/.vim/bundle/vim-perl"]
 	path = vim/.vim/bundle/vim-perl
 	url = https://github.com/vim-perl/vim-perl.git
+[submodule "vim/.vim/bundle/ctrlp"]
+	path = vim/.vim/bundle/ctrlp
+	url = https://github.com/kien/ctrlp.vim.git
