--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-vim/.netrwhist
-vim/sessions
-vim/undodir
-vim/.VimballRecord
+vim/.vim/.netrwhist
+vim/.vim/sessions
+vim/.vim/plugged/*
+!vim/.vim/plugged/.gitkeep
