--- a/tmux/.tmuxrc
+++ b/tmux/.tmuxrc
@@ -49,8 +49,9 @@ tmuxmenu() {
   INPUT=/tmp/tmux_in.$$
   OUTPUT=/tmp/tmux_out.$$
   #trap "rm $OUTPUT; rm $INPUT; exit" SIGHUP SIGINT SIGTERM
-
-  command tmux ls | nl | sed -r 's/^\s+([0-9]+)\s+([a-zA-Z0-9_-]+).*$/\1 \2/' > "${INPUT}"
+ 
+  echo "0 NEW" > "${INPUT}"
+  command tmux ls | nl | sed -r 's/^\s+([0-9]+)\s+([a-zA-Z0-9_-]+).*$/\1 \2/' >> "${INPUT}"
  
   SESSION_LIST="$(cat $INPUT | tr '\n' ' ')"
   COUNT="$(wc -l $INPUT | sed -r 's/^([0-9]+) .+$/\1/')"
@@ -58,9 +59,17 @@ tmuxmenu() {
   command dialog --menu 'tmux session' 0 0 $COUNT $SESSION_LIST 2> "${OUTPUT}"
 
   SESSION_ID="$(cat $OUTPUT)"
-  SESSION="$(grep -E "^$SESSION_ID " $INPUT | sed -r 's/^[0-9]+ (.+)$/\1/')"
+  if [[ $SESSION_ID -eq 0 ]]; then
+    echo "New session"
+    command dialog --inputbox 'session name' 0 0 2> "${OUTPUT}"
+    SESSION_NAME="$(cat $OUTPUT)"
 
-  command tmux attach -t $SESSION
+    command tmux new -s $SESSION_NAME
+  else
+    SESSION="$(grep -E "^$SESSION_ID " $INPUT | sed -r 's/^[0-9]+ (.+)$/\1/')"
+
+    command tmux attach -t $SESSION
+  fi
 }
 
 alias tmm='tmuxmenu'
