Update tmux.conf with more options

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,21 @@
 # Set prefix to Ctrl-Space
+set formatoptions+=j	" delete comment character when joining commented lines
+set formatoptions+=j	" delete comment character when joining commented lines
 unbind C-b
 set -g prefix C-Space
 bind Space send-prefix
+
+# disable vim switching delay
+set -s escape-time 0
+
+# scrollback buffer size
+set -g history-limit 50000
+
+# message display time (ms)
+set -g display-time 3000
+
+# status refresh interval (s)
+set -g status-interval 5
 
 # Use vi keys
 set -gw mode-keys vi
