--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -23,13 +23,11 @@ set -g set-titles on
 set -g set-titles-string '#T - #I:#W'
 
 # Mouse support
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
-setw -g mode-mouse on
+set -g mouse on
 
 # 256 color support
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
 
 # Show activity in background windows
 setw -g monitor-activity on
@@ -40,26 +38,13 @@ set -g base-index 1
 
 # Key bindings
 bind C-d detach                 # same as d
-bind r source-file ~/.tmux.conf # reload config
+bind r source-file ~/.config/tmux/tmux.conf # reload config
 bind C-space last-window
 bind C-c command-prompt -p command: "new-window -n '%1' '%1'"
 
-# set pane colors - hilight the active pane
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
-
-# colorize messages in the command line
-set-option -g message-bg black #base02
-set-option -g message-fg brightred #orange
-
-set-option -g status on                # turn the status bar on
-set -g status-utf8 on                  # set utf-8 for the status bar
-set -g status-interval 5               # set update frequencey (default 15 seconds)
-
-# Status bar
-set -g status-bg colour235
-set -g status-fg yellow
-set -g status-attr dim
+# status bar
+set -g status on                # turn the status bar on
+set -g status-interval 5        # set update frequencey (default 15 seconds)
 
 # hostname and IP address on left
 set -g status-left-length 70
@@ -69,11 +54,15 @@ set -g status-left "#[fg=green][#h#(ipinfo)] #S #I:#P : "
 set -g status-right-length 60
 set -g status-right "#[fg=yellow]:: %d %b %Y #[fg=green]:: %l:%M %p :: #(date -u | awk '{print $4}')::"
 
-setw -g window-status-fg white
-setw -g window-status-bg colour236
-setw -g window-status-attr dim
+# COLORS
 
-setw -g window-status-current-fg yellow
-setw -g window-status-current-bg colour236
-setw -g window-status-current-attr bright
+# set pane colors - hilight the active pane
+set -g pane-border-style fg=colour235 #base02
+set -g pane-active-border-style fg=colour240 #base01
 
+# colorize messages in the command line
+set -g message-style bg=black,fg=brightred #base02 / orange
+
+# status bar colors
+setw -g window-status-style fg=white,bg=colour236,dim
+setw -g window-status-current-style fg=yellow,bg=colour236,bright
