fix: add status bar colors

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -57,12 +57,13 @@ set -g status-right "#[fg=yellow]:: %d %b %Y #[fg=green]:: %l:%M %p :: #(date -u
 # COLORS
 
 # set pane colors - hilight the active pane
-set -g pane-border-style fg=colour235 #base02
+set -g pane-border-style fg=colour236 #base02
 set -g pane-active-border-style fg=colour240 #base01
 
 # colorize messages in the command line
 set -g message-style bg=black,fg=brightred #base02 / orange
 
 # status bar colors
+setw -g status-style fg=yellow,bg=colour236,dim
 setw -g window-status-style fg=white,bg=colour236,dim
 setw -g window-status-current-style fg=yellow,bg=colour236,bright
