fix: add enable pane title renaming

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -21,6 +21,7 @@ set -gw mode-keys vi
 # Update window title
 set -g set-titles on
 set -g set-titles-string '#T - #I:#W'
+set -g allow-rename on
 
 # Mouse support
 set -g mouse on
