switch color theme to catppuccin

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -47,24 +47,17 @@ bind C-c command-prompt -p command: "new-window -n '%1' '%1'"
 set -g status on                # turn the status bar on
 set -g status-interval 5        # set update frequencey (default 15 seconds)
 
-# hostname and IP address on left
-set -g status-left-length 70
-set -g status-left "#[fg=green][#h#(ipinfo)] #S #I:#P : "
-
-# session name, window and pane number, date and time on right
-set -g status-right-length 60
-set -g status-right "#[fg=yellow]:: %d %b %Y #[fg=green]:: %l:%M %p :: #(date -u | awk '{print $4}')::"
-
 # COLORS
 
-# set pane colors - hilight the active pane
-set -g pane-border-style fg=colour236 #base02
-set -g pane-active-border-style fg=colour240 #base01
+# Configure the catppuccin plugin
+set -g @catppuccin_flavor "macchiato"
+set -g @catppuccin_window_status_style "rounded"
+run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
 
-# colorize messages in the command line
-set -g message-style bg=black,fg=brightred #base02 / orange
-
-# status bar colors
-setw -g status-style fg=yellow,bg=colour236,dim
-setw -g window-status-style fg=white,bg=colour236,dim
-setw -g window-status-current-style fg=yellow,bg=colour236,bright
+# Make the status line pretty and add some modules
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_uptime}"
